  POSIX-ignorant external printf(1) commands that process a format operand
  starting with '-' without the standard preceding '--' options terminator.
  This is for backward compatibility with local system scripts. The
  behaviour of the system's external printf(1) determines whether this is
  compiled in or out by default. Normal ksh printf options keep working.

2024-02-09:

- Fixed multiple inaccurate or missing values in the /opt/ast/bin/getconf
  path-bound built-in command.

2024-02-08:

- Fixed an init-time crash that may occur if standard error is on a terminal,
  but the path to its tty device can't be found (e.g., in a chroot situation).

- Fixed corrupted output of the 'time' keyword as formatted via TIMEFORMAT on
  systems where sizeof(time_t) != sizeof(int). Bug introduced on 2020-07-13.

2024-02-06:

- Fixed a regression introduced on 2023-03-04 that caused ksh to lock up
  after using the Arch Linux arch-chroot script.

2024-02-03:

- Fixed: the arithmetic representation of negative integers with a base other
  than 10 is no longer incorrectly treated as unsigned long. For example,
	typeset -i16 n=-12; echo $n
  now correctly outputs '-16#c' and no longer ouputs '16#fffffffffffffff4'.

2024-01-27:

- Fixed: tilde expansion discipline functions (see 2021-03-16) were not
  reinitialised when executing a ksh script without a #! path line.

2024-01-23:

- Fixed a rare crash or rare incorrect behaviour in .sh.tilde.{get,set}
  discipline functions for ~ expansion (see 2021-03-16 below).

- Fixed a bug that caused listing the .sh.match variable with ${!.sh.match} to
  show spurious elements.

2024-01-22:

- Fixed a bug in the loop invariants optimizer (SHOPT_OPTIMIZE) that caused
  expansions of name references to be incorrectly treated as invariant so they
  yielded the wrong values. Fix backported from from ksh 93v- 2013-02-13.

- Fixed a buffer overflow that could occur when using tab completion
  with multibyte filenames.

2024-01-21:
